Fix info bubble wrap

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ button {
 
 .bubble-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 48px;
 }
@@ -123,6 +124,7 @@ button {
 .bubble {
   height: 150px;
   width: 150px;
+  margin-bottom: 20px;
 }
 
 .bubble-image{
